# emtolib

./: .gitignore  .pre-commit-config.yaml  README.md  dispatch.py  dispatch_nbta.py  dispatch_nbti.py  dispatch_nbv.py  emto.ini  main_nbta_dos.py  main_nbti_dos.py  main_nbv_dos.py  main_nbx_tc.py  paper_plots.py  paper_tiv_plots.py  paper_vanadium_plots.py  prepare_dmft.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.testdata/CPA/Fe040_DLM/: fe0484.dos  fe0484.prn  run_emto
.testdata/CPA/Nb/: nb.dos  nb.prn  run_emto
.testdata/CPA/Nb25/: nb.dos  nb.prn  run_emto
.testdata/CPA/Sn50/: co3sn2s2.prn  run_emto
.testdata/DMFT/Nb/: fort.1110  fort.201  run_emto
.testdata/DMFT/Nb2/: Sig  nb.dos  nb.prn
.testdata/DMFT/Nb25/: fort.1110  fort.200  fort.2221  fort.300  fort.400  fort.601  lbccspd.tfh  nb.prn  run_emto
emtolib/: __init__.py  __main__.py  atom.cfg  common.py  config.py  configuration.py  directory.py  easy_kgrn.py  elements.json  errors.py  ftmplt.py  mcmillan.py  meff.py  slurm.py  sws.py  utils.py  xarr.py
emtolib/files/: __init__.py  bmdl_file.py  dmft_file.py  dos_file.py  fes_file.py  fort_files.py  kgrn_file.py  make_file.py  prn_file.py  slurm_file.py
emtolib/input_files/: __init__.py  bmdl.py  kgrn.py  kgrn_dmft.py
emtolib/ouput_files/: __init__.py  dos.py  prn_file.py
emtolib/output_files/: prn_file.py
scripts/: dispatcher.py  main_nbx_tc.py
tests/: test_kgrn.py
