[metadata]
name = emtolib
description = Python package and CLI for the EMTO DFT+CPA code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/emtolib
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    xarray
    zarr
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.entry_points]
console_scripts =
    emtolib = emtolib.__main__:main

[options.extras_require]
build =
    wheel>=0.37.0
    setuptools>=60.0.0
    setuptools-scm[toml]>=4
test =
    hypothesis>=6.0.0
    pytest>=6.2.0
    pytest-cov

[aliases]
test = pytest

[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`

[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    */_version.py,
    docs/*
    scripts/*

[coverage:run]
branch = False
source = emtolib

[coverage:report]
exclude_lines =
    pragma: no cover

    def __repr__
    def __str__

    @abstract

    @property

    raise AssertionError
    raise NotImplementedError

    if 0:
    if __name__ == .__main__.:

ignore_errors = True
omit =
    emtolib/_version.py
    scripts/*
